--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,8 +1,11 @@
 {
-    "expo": {
-        "name": "frontend",
-        "slug": "frontend",
-        "version": "1.0.0",
-        "orientation": "portrait"
-    }
+  "expo": {
+    "name": "frontend",
+    "slug": "frontend",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "plugins": [
+      "expo-sqlite"
+    ]
+  }
 }
